Fix character list overlapping toolbar

--- a/css/characters.css
+++ b/css/characters.css
@@ -18,7 +18,7 @@
     align-content: start;
     overflow: auto;
     padding-bottom: 128px;
-    margin-top: -2em;
+    margin-top: -1em;
 }
 
 th {
